Work on edit page

--- a/app/views/air_filters/edit.html.erb
+++ b/app/views/air_filters/edit.html.erb
@@ -11,10 +11,11 @@
   <br>
   <hr>
   <% Machine.all.each do |machine| %>
-    <%= check_box_tag "air_filter[machine_id]", machine.id %>
+    <%= check_box_tag "air_filter[machine_ids][]", machine.id %>
     <%= machine.title %><br>
   <% end %>
   
   <%= f.submit %>
 
 <% end %>
+
