--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,36 @@
 </head>
 <body>
   
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Brand</a>
+      </div>
+      
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <% if admin_signed_in? %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"aria-expanded="false"><%=@user.email%><span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><%= link_to "Log Out", destroy_admin_session_path, :method => :delete %></li>
+            </ul>
+          </li>
+          <% else %>
+          <li><%= link_to "Sign In", new_admin_session_path %></li>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 
