--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
         <ul class="nav navbar-nav navbar-right">
           <% if admin_signed_in? %>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"aria-expanded="false"><%=@user.email%><span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"aria-expanded="false"><%= current_admin.email %><span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><%= link_to "Log Out", destroy_admin_session_path, :method => :delete %></li>
             </ul>
@@ -37,8 +37,12 @@
       </div>
     </div>
   </nav>
-  
-  <p class="notice"><%= notice %></p>
+  <% if flash[:notice] %>
+    <p class="alert alert-success alert-dismissible" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <%= notice %>
+    </p>
+  <% end %>
   <p class="alert"><%= alert %></p>
 
 <%= yield %>
