--- a/app/assets/stylesheets/parts.css.scss
+++ b/app/assets/stylesheets/parts.css.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the parts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+tr {
+  cursor: pointer;
+}
+.btn-group-wrapper {
+  margin-bottom: 40px;
+}
