--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,14 +38,26 @@
     </div>
   </nav>
   <% if flash[:notice] %>
-    <p class="alert alert-success alert-dismissible" role="alert">
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      <%= notice %>
-    </p>
+    <div class="container">
+      <p class="alert alert-success alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <%= notice %>
+      </p>
+    </div>
   <% end %>
-  <p class="alert"><%= alert %></p>
+  <% if flash[:alert] %>
+    <div class="container">
+      <p class="alert alert-warning alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">$times;</span></button>
+        <%= alert %>
+      </p>
+    </div>
+  <% end %>
 
 <%= yield %>
 
+<div class="container">
+  <%= debug(params) if Rails.env.development? %>
+</div>
 </body>
 </html>
