--- a/app/views/admin/machines/index.html.erb
+++ b/app/views/admin/machines/index.html.erb
@@ -1,64 +1,57 @@
 <div class="container">
   <div class="page-header">
-    <h1>Admin Parts List</h1>
+    <h1>Admin Machine List</h1>
   </div>
 </div>
-
-
 <div class="container">
   <div class="row">
     <div class="col-md-8">
-      <%= search_form_for @q, url: admin_parts_path, :html => {:class => "form-inline"} do |f| %>
+      <%= search_form_for @machine, url: admin_machines_path, :html => {:class => "form-inline"} do |f| %>
         <div class="form-group">
-          <%= f.label :part_id_cont %>
-          <%= f.search_field :part_number_cont, :class => "form-control" %>
+          <%= f.label :title_cont %>
+          <%= f.search_field :title_cont, :class => "form-control" %>
         </div>
         <%= f.submit nil, :class => "btn btn-default" %>
+        <%= link_to "Clear", admin_machines_path, :class => "btn btn-primary" %>
       <% end %>
     </div>
     <div class="col-md-4">
-        <div class="pull-right">
-          <%= render "layouts/new_button" %>
-        </div>
+      <div class="pull-right">
+        <%= render "layouts/new_button" %>
+      </div>
     </div>
   </div>
-  
   <hr>
-  
   <div class="row">
     <div class="col-md-12">
-      
       <div class="panel panel-default">
         <div class="panel-heading">Parts List</div>
         <table class="table table-striped table-hover">
           <thead>
             <tr>
               <th>ID</th>
-              <th>Type</th>
-              <th>Brand</th>
-              <th>Part Number</th>
-              <th>Fitment</th>
+              <th>Title</th>
+              <th>Parts</th>
             </tr>
           </thead>
           <tbody>
             <% @results.each do |result| %>
-              <tr data-link="<%= edit_admin_part_path(result) %>">
+              <tr data-link="<%= edit_admin_machine_path(result)%>">
                 <td><%= result.id %></td>
-                <td><%= result.type %></td>
-                <td><%= result.brand %></td>
-                <td><%= link_to result.part_number, edit_admin_part_path(result) %></td>
+                <td><%= link_to result.title, edit_admin_machine_path(result) %></td>
                 <td>
-                  <% result.machines.map do |machine| %>
-                    <%= machine.title %>,
+                  <% result.parts.map do |part| %>
+                    <%= part.brand %> <%= part.part_number %>
+                    <span class="glyphicon glyphicon-minus"></span>
                   <% end %>
                 </td>
               </tr>
             <% end %>
-          </tobdy>
+          </tbody>
         </table>
       </div>
-      
     </div>
+    
   </div>
 </div>
 
