--- a/app/views/admin/parts/show.html.erb
+++ b/app/views/admin/parts/show.html.erb
@@ -1,14 +1,21 @@
 <div class="container">
   <div class="page-header">
-    <h1>Showing Part# <%= @part.part_number %></h1>
+    <h1>Showing Part # <%= @part.part_number %></h1>
   </div>
   <div class="btn-group pull-right" role="group" aria-label="...">
-    <%= link_to "Edit", edit_admin_part_path, class: "btn btn-default" %>
-    <%= link_to "New", new_admin_part_path, class: "btn btn-default" %>
-    <%= link_to "All Parts", admin_parts_path, class: "btn btn-default" %>
+    <%= link_to "Edit", edit_admin_part_path, class: "btn btn-warning" %>
+    <%= render "layouts/new_button" %>
+    <%= link_to "All Parts", admin_parts_path, class: "btn btn-info" %>
   </div>
   <div class="col-md-12">
-  <%= @part.brand %>
-  <%= @part.part_number %>
+    <div class="row">
+      <div class="col-md-6">
+        <ul class="list-group">
+          <% @part.machines.each do |machine| %>
+          <li class="list-group-item"><%= machine.title %></li>
+          <% end %>
+        </ul>
+      </div>
+    </div>
   </div>
 </div>
