--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <body>
   
   <nav class="navbar navbar-default">
-    <div class="container-fluid">
+    <div class="container">
       
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -22,6 +22,10 @@
       </div>
       
       <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li><%= link_to "All Parts", admin_parts_path %></li>
+          <li><%= link_to "All Machines", admin_machines_path %></li>
+        </ul>
         <ul class="nav navbar-nav navbar-right">
           <% if admin_signed_in? %>
           <li class="dropdown">
