--- a/app/views/admin/air_filters/new.html.erb
+++ b/app/views/admin/air_filters/new.html.erb
@@ -30,6 +30,7 @@
             </li>
           <% end %>
           </ul>
+          <%= will_paginate @list_all_af %>
         </div>
       </div>
       
