--- a/app/views/admin/machines/new.html.erb
+++ b/app/views/admin/machines/new.html.erb
@@ -23,6 +23,7 @@
             </li>
           <% end %>
           </ul>
+          <%= will_paginate @list_all_m %>
         </div>
       </div>
       
