--- a/app/views/machines/index.html.erb
+++ b/app/views/machines/index.html.erb
@@ -7,7 +7,7 @@
   <div class="row">
     <div class="col-md-12">
       <div class="panel panel-default">
-        <div class="panel-heading">Most Recent Machinest</div>
+        <div class="panel-heading">Most Recent Machines</div>
         <table class="table table-striped table-hover">
           <thead>
             <tr>
