--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -1,3 +1,5 @@
+<% title "#{@machine.title} | Machine Cheat Sheet" %>
+
 <div class="container">
   <div class="page-header">
     <h1><%= @machine.title %></h1>
@@ -9,7 +11,7 @@
     <div class="col-md-12">
       <div class="panel panel-default">
         <div class="panel-heading">Air Filters</div>
-        <table class="table table-striped table-hover">
+        <table class="table table-striped table-hover user-show">
           <thead>
             <tr>
               <th>Brand</th>
