Work on adding terms to machines

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,4 +15,8 @@
  @import "bootstrap-sprockets";
  @import "bootstrap";
 
-@import "parts";
+ @import "parts";
+ 
+ .navbar-default {
+  background-color: #fff;
+ }
