--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,10 +16,7 @@
  @import "bootstrap";
 
  @import "parts";
- 
- body {
-  background: #fafafa;
- }
+
  .navbar-default {
   background-color: transparent;
   border-bottom: none;
@@ -38,4 +35,51 @@
  BUTTONS
  
  *******************************************************************/
- 
+
+.twitter-typeahead {
+  display: block !important;
+}
+
+.search-form-input {
+    display: block;
+    width: 100%;
+    background-color: #dbdde0 !important;
+    border: 2px solid #dbdde0;
+    padding: 9px 11px;
+    
+    &:focus {
+      background-color: lighten(#dbdde0, 11%) !important;
+      outline: none;
+    }
+}
+
+.search-form .btn.btn-default {
+  margin-top: 7px;
+  float: right;
+}
+
+.tt-dropdown-menu {
+  padding: 5px 0;
+  margin: 2px 0 0;
+  border: 1px solid rgba(0,0,0,.15);
+  background: #fff;
+  background-clip: padding-box;
+  box-shadow: 0 6px 12px rgba(0,0,0,.175);
+  width: 100%;
+}
+
+.tt-suggestion {
+  display: block;
+  padding: 3px 20px;
+  clear: both;
+  font-weight: 400;
+  line-height: 1.42857143;
+  color: #333;
+  white-space: nowrap;
+  
+  &:hover {
+    color: #262626;
+    background-color: #f5f5f5;
+    cursor: pointer;
+  }
+}
