--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title><%= content_for?(:title) ? content_for(:title) : "Machine Cheat Sheet" %></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -18,7 +19,8 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to (" <span class='label label-warning'>Beta</span>").html_safe, root_path, :class => "navbar-brand" %>
+        <%= link_to ("Machine Cheat Sheet <span class='label label-warning'>Beta</span>").html_safe, root_path, :class => "navbar-brand" %>
+
       </div>
       
       <div class="collapse navbar-collapse">
@@ -45,27 +47,18 @@
     </div>
   <% end %>
   
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-6 col-lg-offset-3">
+  <% if current_page?("/") %>
+    <%= render partial: "home" %>
+  <% end %>
 
-          <%= form_tag machines_path, :method => 'get', :class => 'search-form' do %>
-              <%= text_field_tag :search, params[:search], class: "typeahead search-form-input", placeholder: "Search by Machine" %>
+  <%= yield %>
 
-                <%= submit_tag "Search", :name => nil, :class => "btn btn-default" %>
-
-
-          <% end %>
-
-              
-      </div><!-- /.col-lg-6 -->
-    </div>
-  </div>
-
-<%= yield %>
 
 <div class="container">
   <%= debug(params) if Rails.env.development? %>
 </div>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-553b380d3a150b5f" async="async"></script>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-553b380d3a150b5f" async="async"></script>
+
 </body>
 </html>
