Added New Relic

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -30,9 +30,8 @@
     margin-top: 7px;
     float: right;
   }
-  
-  .search-form-wrapper {
-    padding: 28px 0;
+  .panel.panel-default.machine-list {
+    margin-top: 60px;
   }
   .search-form {
     margin: 18px 0;
