--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -1,16 +1,16 @@
 <% title "#{@machine.title} | Machine Cheat Sheet" %>
 
 <div class="container">
-  <div class="page-header">
-    <h1><%= @machine.title %></h1>
-  </div>
-</div>
-
-<div class="container">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-8 col-md-offset-2">
+      <h2><%= @machine.title %></h2>
+      <hr>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
       <div class="panel panel-default">
-        <div class="panel-heading">Air Filters</div>
+        <div class="panel-heading"><strong>Air Filters</strong></div>
         <table class="table table-striped table-hover user-show">
           <thead>
             <tr>
