Added ajax support for admin dashboard

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Brand</a>
+        <%= link_to "Dashboard", admin_parts_path, :class => "navbar-brand" %>
       </div>
       
       <div class="collapse navbar-collapse">
