--- a/app/views/admin/parts/edit.html.erb
+++ b/app/views/admin/parts/edit.html.erb
@@ -10,22 +10,8 @@
       <%= link_to "Delete", admin_part_path, class: "btn btn-danger", method: :delete, data: {confirm: "Are You Sure"} %>
     </div>
   </div>
-  
-  
-      <%= search_form_for @q, url: admin_machines_path, :html => {:class => "form-inline"} do |f| %>
-        <div class="form-group">
-          <%= f.label :machine_title_cont %>
-          <%= f.search_field :title_cont, :class => "form-control" %>
-        </div>
-        <%= f.submit nil, :class => "btn btn-default" %>
-      <% end %>
-  
-  
-
-    <div class="col-md-6">
-
-
-  <%= simple_form_for @part, url:admin_part_path, html: {class: 'form-horizontal' } do |f| %>
+  <div class="col-md-6">
+    <%= simple_form_for @part, url:admin_part_path, html: {class: 'form-horizontal' } do |f| %>
       <div class="form-group">
         <%= f.label :brand, class: 'col-md-3' %>
         <div class="col-sm-9">
@@ -38,25 +24,39 @@
           <%= f.text_field :part_number, class: 'form-control' %>
         </div>
       </div>
-    </div>
-    <div class="col-md-6">
+
+
+      <ul class="list-group" id="list-group-form">
+      <% @all_machines.each do |machine| %>
       
-      
-      
-      <ul class="list-group">
-      <% @machines.each do |machine| %>
-      <li class="list-group-item">
-        <%= check_box_tag 'part[machine_ids][]', machine.id, @part.machines.include?(machine) %>
-        <%= machine.title %>
-      </li>
+        <% if @part.machines.include?(machine) %>
+        <li class="list-group-item">
+          <%= check_box_tag 'part[machine_ids][]', machine.id, @part.machines.include?(machine) %>
+          <%= machine.title %>
+        </li>
+        <% end %>
+
       <% end %>
       </ul>
-    </div>
+
     
     <%= f.submit :class => 'btn btn-lg btn-block btn-success' %>
   
   
   <% end %>
-
+</div>
+<div class="col-md-6">
+  
+  <%= form_tag edit_admin_part_path, :method => 'get', :id => "machine_filter", :autocomplete => "off" do %>
+  <div class="input-group col-sm-12">
+    <%= text_field_tag :search, params[:search], :class => "form-control", :placeholder => "Search for a machine to add..." %>
+</div>
+  </p>
+<% end %>
+<ul class="list-group" id="all-list-group">
+  <%= render "checkbox_machines" %>
+</ul>
+<%= will_paginate @machines %>
+</div>
 </div>
 
