--- a/app/views/machines/_home.html.erb
+++ b/app/views/machines/_home.html.erb
@@ -12,6 +12,7 @@
       </div><!-- /.col-lg-6 -->
     </div>
     <div class="col-sm-8 col-sm-offset-2">
+      <% if (!@unit.nil?) %>
       <h3>Here is a live example <small>for a <%= @unit.title %></small></h3>
       <table class="table table-striped table-hover">
         <thead>
@@ -29,5 +30,6 @@
           <% end %>
         </tbody>
       </table>
+      <% end %>
     </div>
   </div>
