--- a/app/views/layouts/_new_button.html.erb
+++ b/app/views/layouts/_new_button.html.erb
@@ -1,9 +1,19 @@
 <div class="btn-group">
-      <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-        New <span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu" role="menu">
-        <li><%= link_to "New Machine", new_admin_machine_path %></li>
-        <li><%= link_to "New Air Filter", new_admin_airfilter_path %></li>
-      </ul>
-    </div>
+  <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+  New Part<span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" role="menu">
+    <li><%= link_to "New Air Filter", new_admin_airfilter_path %></li>
+  </ul>
+</div>
+
+<div class="btn-group">
+  <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+  New Machine<span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" role="menu">
+    <li><%= link_to "New Atv", new_admin_atv_path %></li>
+    <li><%= link_to "New Motorcycle", new_admin_motorcycle_path %></li>
+    <li><%= link_to "New Snowmobile", new_admin_snowmobile_path %></li>
+  </ul>
+</div>
