Added user model to app

--- a/app/views/machines/_home.html.erb
+++ b/app/views/machines/_home.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-      <div class="col-sm-8 col-sm-offset-2">
+      <div class="col-lg-8 col-lg-offset-2">
         <p class = "lead">A growing library of <%= @machine.count %> machines and <%= @parts.count %> parts
         providing fast, accurate information to the most common maintenance questions.</p>
       </div>
