--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -26,6 +26,18 @@
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav pull-right">
           <li><%= link_to "All Machines", machines_path %></li>
+          <% if user_signed_in? %>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= current_user.username %> <span class="caret"></span></a> 
+              <ul class="dropdown-menu" role="menu">
+                <li><%= link_to "Home", user_path(current_user.slug) %></li>
+                <li><%= link_to "Sign Out", destroy_user_session_path, :method => :delete %></li>
+              </ul>
+            </li>
+          <% else %>
+          <li><%= link_to "Register", new_user_registration_path %></li>
+          <li><%= link_to "Sign In", new_user_session_path %></li>
+          <% end %>
         </ul>
       </div>
     </div>
